# lancelot

./: DeviceCode_V1.1.0.ino  DeviceCode_V1.1.2.ino  DeviceCode_V1_1_0.ino  README.md  db.sqlite3  pyproject.toml
App/: settings.py  views.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.css  main.jsx
frontend/src/app/: store.js
frontend/src/app/features/: deviceList.js  selectedDevice.js  trackerSlice.js
frontend/src/components/: AddDevicePopup.jsx  AddTrackerButton.css  AddTrackerButton.jsx  DataGraph.jsx  DevicePlate.css  DevicePlate.jsx  MapPanel.css  MapPanel.jsx  Navbar.css  Navbar.jsx  TrackerPanel.jsx  TrackerSelector.css  about.css  about.jsx  addtracker.css  addtracker.jsx  dashboard.css  dashboard.jsx  home.css  home.jsx  navbar.css  navbar.jsx  profile.css  profile.jsx  settings.css  settings.jsx  trackermenu.css  trackermenu.jsx  trackerpanel.css
frontend/src/components/Global/: Navbar.css  Navbar.jsx
frontend/src/components/LiveDashboard/: AddDevicePopup.css  AddDevicePopup.jsx  AddTrackerButton.css  AlarmSwitch.jsx  DevicePlate.css  DevicePlate.jsx  MapPanel.jsx  SettingsButton.jsx  TrackerSelector.css  TrackerSelector.jsx  VehicleView.css  VehicleView.jsx
frontend/src/pages/: LiveDashboard.jsx
gyro/: apps.py
mqttClient/: apps.py
server/: __init__.py  app.py  constants.py  convert_to_geojson.py  plot_map.py  routes.py
test data/: gps_mqtt_messages.txt  temperature_humidity_mqtt_messages.txt
