[project]
name = "server"
version = "0.1.0"
description = "Flask Server"
authors = [
    {name = "Yash Mathur",email = "yashm.devs@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-server = "server.__init__:main"


