[project]
name = "server"
version = "0.1.0"
description = "server for web app"
authors = [
    {name = "Yash Mathur",email = "yashm.devs@gmail.com"},
    {name = "Ankit Dey",email = "ankitdey0811@gmail.com"},
    {name = "Saranyo Ray", email= "saranyoray@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "folium (>=0.19.5,<0.20.0)",
    "flask-socketio (>=5.5.1,<6.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
